Add yves in authors, for localisation, debian packaging
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2106 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/AUTHORS
+++ b/AUTHORS
@@ -18,3 +18,4 @@ Liang-Bin Hsueh <hlb@bestpractical.com>
 Wolfgang Kinkeldei <wolfgang@kinkeldei.de>
 Paul Fenwick <pjf@perltraining.com.au>
 Edmund von der Burg <evdb@ecclestoad.co.uk>
+Yves Agostini <agostini@univ-metz.fr>
