--- a/plugins/Login/share/po/fr.po
+++ b/plugins/Login/share/po/fr.po
@@ -8,16 +8,36 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 2006-10-24 15:00+ZONE\n"
-"PO-Revision-Date: 2006-10-25 10:36+ZONE\n"
+"PO-Revision-Date: 2006-11-09 14:35+ZONE\n"
 "Last-Translator: AGOSTINI Yves <agostini@univ-metz.fr>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 
+#: lib/Jifty/Plugin/Login/Notification/ConfirmAddress.pm:42
+#. ($appname,$confirm_url)
+msgid ""
+"\n"
+"You're getting this message because you (or somebody claiming to be you)\n"
+"signed up for %1.\n"
+"\n"
+"Before you can use %1, we need to make sure that we got your email\n"
+"address right.  Click on the link below to get started:\n"
+"\n"
+"%2\n"
+msgstr ""
+"\n"
+"Vous demandez une inscription sur l'application %1.\n"
+"\n"
+"Avant de pouvoir vous connecter, vous devez confirmer votre adresse mail\n"
+"en cliquant sur le lien ci-dessous :\n"
+"\n"
+"%2\n"
+
 #: lib/Jifty/Plugin/Login/Action/Signup.pm:110
 msgid ". We've sent a confirmation message to your email box."
-msgstr ". Un message de confirmation vous a été envoyé par mail."
+msgstr ". Une demande de confirmation vous a été envoyée par mail."
 
 #: lib/Jifty/Plugin/Login/Action/ConfirmEmail.pm:52
 msgid ". Your email address has now been confirmed."
@@ -33,7 +53,7 @@ msgstr "Demande de confirmation transmise."
 
 #: share/web/templates/login:15
 msgid "Don't have an account?"
-msgstr "Vous n'avez pas de compte?"
+msgstr "Vous n'avez pas de compte ?"
 
 #: lib/Jifty/Plugin/Login/Action/Login.pm:23
 msgid "Email address"
@@ -49,7 +69,7 @@ msgstr "Ce compte ne semble pas exister."
 
 #: lib/Jifty/Plugin/Login/Action/Signup.pm:69
 msgid "It looks like you already have an account. Perhaps you want to <a href=\"/login\">sign in</a> instead?"
-msgstr "Vous semblez déjà avoir un compte. Vous désirez peut-être plutôt vous <a href=\"/login\">identifier</a> ?"
+msgstr "Vous semblez avoir déjà un compte. Vous désirez peut-être plutôt vous <a href=\"/login\">identifier</a> ?"
 
 #: lib/Jifty/Plugin/Login/Action/ResetLostPassword.pm:68
 msgid "It looks like you didn't enter the same password into both boxes. Give it another shot?"
@@ -89,7 +109,7 @@ msgstr "S'enregistrer"
 
 #: lib/Jifty/Plugin/Login/Action/Signup.pm:102
 msgid "Something bad happened and we couldn't create your account.  Try again later. We're really, really sorry."
-msgstr "Votre compte ne peut actuellement être créé. Merci de réessayer ultérieurement."
+msgstr "Votre compte ne peut pas actuellement être créé. Merci de ré-essayer ultérieurement."
 
 #: lib/Jifty/Plugin/Login/Action/Login.pm:60 lib/Jifty/Plugin/Login/Action/SendAccountConfirmation.pm:67 lib/Jifty/Plugin/Login/Action/SendPasswordReminder.pm:70 lib/Jifty/Plugin/Login/Action/Signup.pm:62
 msgid "That doesn't look like an email address."
@@ -125,7 +145,7 @@ msgstr "Vous n'avez pas encore confirmé votre compte."
 
 #: lib/Jifty/Plugin/Login/Action/Login.pm:90
 msgid "You may have mistyped your email address or password. Give it another shot?"
-msgstr "Erreur dans votre mail ou votre mot de passe. Ré-essayer?"
+msgstr "Erreur dans votre mail ou votre mot de passe. Ré-essayer ?"
 
 #: share/web/templates/login:18
 msgid "You're already logged in."
