--- a/plugins/Login/share/po/fr.po
+++ b/plugins/Login/share/po/fr.po
@@ -8,12 +8,35 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 2006-10-24 15:00+ZONE\n"
-"PO-Revision-Date: 2006-11-10 10:47+ZONE\n"
+"PO-Revision-Date: 2006-11-10 22:42+ZONE\n"
 "Last-Translator: AGOSTINI Yves <agostini@univ-metz.fr>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+#: lib/Jifty/Plugin/Login/Notification/ConfirmLostPassword.pm:41
+#. ($appname,$confirm_url)
+msgid ""
+"\n"
+"You're getting this message because you (or somebody claiming to be you)\n"
+"request to reset your password for %1.\n"
+"\n"
+"If you don't want to reset your password just ignore this message.\n"
+"\n"
+"To reset your password, click on the link below:\n"
+"\n"
+"%2\n"
+msgstr ""
+"\n"
+"Vous recevez ce message, parce que quelqu'un demande un nouveau mot de\n"
+"passe pour l'application %1.\n"
+"\n"
+"Si cela ne vous convient pas, ignorez tout simplement ce message.\n"
+"\n"
+"Pour changer votre mot de passe cliquez sur le lien ci-dessous :\n"
+"\n"
+"%2\n"
 
 #: lib/Jifty/Plugin/Login/Notification/ConfirmAddress.pm:42
 #. ($appname,$confirm_url)
@@ -79,7 +102,7 @@ msgstr "Ce compte ne semble pas exister."
 msgid "It looks like you already have an account. Perhaps you want to <a href=\"/login\">sign in</a> instead?"
 msgstr "Vous semblez avoir déjà un compte. Vous désirez peut-être plutôt vous <a href=\"/login\">identifier</a> ?"
 
-#: lib/Jifty/Plugin/Login/Action/ChangePassword.pm:70 lib/Jifty/Plugin/Login/Action/ResetLostPassword.pm:68
+#: lib/Jifty/Plugin/Login/Action/ChangePassword.pm:70 lib/Jifty/Plugin/Login/Action/ResetLostPassword.pm:72
 msgid "It looks like you didn't enter the same password into both boxes. Give it another shot?"
 msgstr "Les mots de passe semblent différents. Ré-essayer ?"
 
@@ -91,9 +114,17 @@ msgstr "Votre identifiant a déjà été vérifié."
 msgid "Login"
 msgstr "Identification"
 
+#: lib/Jifty/Plugin/Login/Notification/ConfirmLostPassword.pm:38
+msgid "Message from "
+msgstr "Message de "
+
 #: lib/Jifty/Plugin/Login/Action/Signup.pm:45
 msgid "Name"
 msgstr "Nom"
+
+#: share/web/templates/let/reset_lost_password:16
+msgid "New password"
+msgstr "Enregistrer"
 
 #: lib/Jifty/Plugin/Login/Action/Login.pm:66
 msgid "No account has that email address."
@@ -103,13 +134,25 @@ msgstr "Aucun compte n'a cette adresse mail."
 msgid "Ok, you're now logged out. Have a good day."
 msgstr "Vous êtes déconnecté. Au revoir."
 
-#: lib/Jifty/Plugin/Login/Action/ChangePassword.pm:30 lib/Jifty/Plugin/Login/Action/Login.pm:30
+#: lib/Jifty/Plugin/Login/Action/ChangePassword.pm:30 lib/Jifty/Plugin/Login/Action/Login.pm:30 lib/Jifty/Plugin/Login/Action/ResetLostPassword.pm:32
 msgid "Password"
 msgstr "Mot de passe"
 
 #: lib/Jifty/Plugin/Login/Action/Login.pm:35
 msgid "Remember me?"
 msgstr "S'en rappeller ?"
+
+#: share/web/templates/let/reset_lost_password:9
+msgid "Reset lost password"
+msgstr "Nouveau mot de passe"
+
+#: share/web/templates/passwordreminder:18
+msgid "Send"
+msgstr "Envoyer"
+
+#: share/web/templates/passwordreminder:9
+msgid "Send a password reminder"
+msgstr "Recevoir un nouveau mot de passe"
 
 #: share/web/templates/signup:11 share/web/templates/signup:6
 msgid "Signup"
@@ -123,7 +166,7 @@ msgstr "Votre compte ne peut pas actuellement être créé. Merci de ré-essayer ult
 msgid "That doesn't look like an email address."
 msgstr "Cela ne ressemble pas à une adresse mail."
 
-#: lib/Jifty/Plugin/Login/Action/ChangePassword.pm:76 lib/Jifty/Plugin/Login/Action/ResetLostPassword.pm:74
+#: lib/Jifty/Plugin/Login/Action/ChangePassword.pm:76 lib/Jifty/Plugin/Login/Action/ResetLostPassword.pm:78
 msgid "There was an error setting your password."
 msgstr "Erreur lors de la création de votre mot de passe."
 
@@ -139,7 +182,7 @@ msgstr "Bienvenue, "
 msgid "Welcome to "
 msgstr "Bienvenue sur "
 
-#: lib/Jifty/Plugin/Login/Action/ChangePassword.pm:56 lib/Jifty/Plugin/Login/Action/ResetLostPassword.pm:54
+#: lib/Jifty/Plugin/Login/Action/ChangePassword.pm:56 lib/Jifty/Plugin/Login/Action/ResetLostPassword.pm:58
 msgid "You don't exist. I'm not sure how this happened. Really, really sorry. Please email us!"
 msgstr "Vous n'existez pas !!!"
 
@@ -150,6 +193,10 @@ msgstr "Vous avez déjà confirmé votre compte."
 #: lib/Jifty/Plugin/Login/Action/Login.pm:96
 msgid "You haven't confirmed your account yet."
 msgstr "Vous n'avez pas encore confirmé votre compte."
+
+#: share/web/templates/passwordreminder:10
+msgid "You lost your password. A reminder will be send to the following mail:"
+msgstr "Vous avez perdu votre mot de passe. Un message d'assistance peut vous être re-transmis à votre mail d'origine :"
 
 #: lib/Jifty/Plugin/Login/Action/Login.pm:90
 msgid "You may have mistyped your email address or password. Give it another shot?"
@@ -163,7 +210,7 @@ msgstr "Vous êtes déjà connecté."
 msgid "Your password has been changed.  Welcome back."
 msgstr ""
 
-#: lib/Jifty/Plugin/Login/Action/ResetLostPassword.pm:79
+#: lib/Jifty/Plugin/Login/Action/ResetLostPassword.pm:83
 msgid "Your password has been reset.  Welcome back."
 msgstr "Votre mot de passe a été ré-initialisé. Bon retour."
 
@@ -171,6 +218,6 @@ msgstr "Votre mot de passe a été ré-initialisé. Bon retour."
 msgid "email address"
 msgstr "adresse mail"
 
-#: lib/Jifty/Plugin/Login/Action/ChangePassword.pm:35 lib/Jifty/Plugin/Login/Action/ResetLostPassword.pm:33
+#: lib/Jifty/Plugin/Login/Action/ChangePassword.pm:35 lib/Jifty/Plugin/Login/Action/ResetLostPassword.pm:37
 msgid "type your password again"
 msgstr "confirmez votre mot de passe"
