--- a/lib/Jifty/Manual/RequestHandling.pod
+++ b/lib/Jifty/Manual/RequestHandling.pod
@@ -11,7 +11,7 @@ what happens during the request processing phase.
 
 As soon as a http request (whatever the method might be like GET,
 POST, PUT, ...) arrives at Jifty's border, the request is forwarded to
-a handler. By default, C<Jifty-E<gt>handler> points to a L<Jifty::Handler>
+a handler. By default, C<< Jifty->handler >> points to a L<Jifty::Handler>
 object that is responsible for handling an incoming request. The
 handler receives a L<CGI> object on which it operates.
 
@@ -28,7 +28,7 @@ otherwise become necessary. This is never done on a live environment.
 =item build a stash
 
 The stash is a storage area that can be reached by simply accessing
-C<Jifty-E<gt>handler-E<gt>stash-E<gt>{some_key}>. The stash will start fresh with
+C<< Jifty->handler->stash->{some_key} >>. The stash will start fresh with
 every request and lives for the entire lifetime of a request. Using
 the stash, transporting data between otherwise unconnected modules
 will become possible.
@@ -37,13 +37,14 @@ will become possible.
 
 Using the L<CGI> object, a L<Jifty::Request> object is constructed and
 its data is populated with the CGI's data. The request can be reached
-later using C<Jifty-E<gt>web-E<gt>request>. The request holds information
+later using C<< Jifty->web->request >>. The request holds information
 about all actions involved, all page fragments, contains state
 variables and arguments (usually GET/POST parameters).
 
 Also, an empty L<Jifty::Response> object is constructed that contains
 one or more L<Jifty::Result> objects, each of which holds one
-L<Jifty::Action>'s result. The response object can be retrieved with C<Jifty-E<gt>web-E<gt>response>
+L<Jifty::Action>'s result. The response object can be retrieved with
+the C<< Jifty->web->response >> method.
 
 =item setup plugins
 
@@ -60,19 +61,20 @@ housed in a C<static> directory, this content is handled.
 
 Based on a cookie that is sent with every http response, the current
 user is assigned a unique session. The session is stored in a
-L<Jifty::Web::Session> object and can be used with C<Jifty-E<gt>web-E<gt>session>.
+L<Jifty::Web::Session> object and can be accessed using with the
+C<< Jifty->web->session >> method.
 
 =item return from a continuation if requested
 
 If there is an open continuation on the stack (e.g. from a
-C<Jifty-E<gt>web-E<gt>tangent> link) and the return has been requested
-(e.g. by a C<Jifty-E<gt>web-E<gt>return> link), the return will execute at
+C<< Jifty->web->tangent >> link) and the return has been requested
+(e.g. by a C<< Jifty->web->return >> link), the return will execute at
 this stage.
 
 =item handle dynamic request unless already served
 
 First, the user is given a cookie containing the session-id. Then, the
-request is forwarded to C<Jifty-E<gt>handler-E<gt>dispatcher>, a
+request is forwarded to C<< Jifty->handler->dispatcher >>, a
 L<Jifty::Dispatcher> object to handle the request. The dispatcher
 works through the following steps:
 
