* Jifty::Manual::UsingCSSandJS - Fix the misspelled "app.css" to the correct   "app.js"; minor reformatting.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2164 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/UsingCSSandJS.pod
+++ b/lib/Jifty/Manual/UsingCSSandJS.pod
@@ -158,13 +158,22 @@ This library adds support for querying the DOM using CSS selectors.
 =head2 Assembly of JS definitions
 
 Jifty maintains a complete list of JS files to include. This list may
-be retrieved or set by the accessor
-C<Jifty-E<gt>web-E<gt>javascript_libs>. There should, however, rarely
-arise a situation to do that, because Jifty already reserved two files
-that may get added to your application. C<app.css> which is initially
-empty can get all JS functions you need to define and
-C<app_behaviour.js> is intentionally reserved for defining behaviors
-for DOM objects using the C<behaviour.js> library.
+be retrieved or set by the accessor C<< Jifty->web->javascript_libs >>.
+There should, However, rarely arise a situation to do that, because
+Jifty already reserved two files that may get added to your application:
+
+=over 4
+
+=item F<app.js>
+
+Initially empty; put all JS functions you need to define here.
+
+=item F<app_behaviour.js>
+
+Reserved for defining behaviors for DOM objects using the C<behaviour.js>
+library.
+
+=back
 
 The assembly process of all JS definitions is done in L<Jifty::Web> by
 the method C<include_javascript>.
