* add basic test for ldap plugins * update debian files
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2194 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/debian/README
+++ b/debian/README
@@ -15,7 +15,7 @@ Please let me know if they do and I'll try and fix them.
 
 Bart Bunting
 
-And others packages from cpan 0.60912 here :
+And others packages since cpan 0.60912 here :
  deb http://ftp.univ-metz.fr/debian sarge jifty
 
 with some plugins packages, update for sarge and ubuntu 6.06 LTS
