added myself to AUTHORS (per obra).
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2224 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/AUTHORS
+++ b/AUTHORS
@@ -19,3 +19,4 @@ Wolfgang Kinkeldei <wolfgang@kinkeldei.de>
 Paul Fenwick <pjf@perltraining.com.au>
 Edmund von der Burg <evdb@ecclestoad.co.uk>
 Yves Agostini <agostini@univ-metz.fr>
+Agent Zhang <agentzh@gmail.com>
