--- a/lib/Jifty/Manual/Actions.pod
+++ b/lib/Jifty/Manual/Actions.pod
@@ -248,23 +248,25 @@ automatically redirect you to a view page for that new blog post. The
 view page template may have the following piece of code in it:
 
     <%args>
-    $id
+    $id => undef
     </%args>
     <%init>
-    my $result = Jifty->web->response->result('post');
+    my $result = Jifty->web->response->result('post_blog');
     $id = $result->content('id') if $result and !defined $id;
     # load the record by $id and other stuff go here...
    </%init>
 
-where C<'post'> is the moniker of your post page action. In fact, that's
-exactly how actions "return" values to other templates in your application.
+where C<'post_blog'> is the moniker for your post page action object.
+In fact, that's exactly how actions "return" values to other templates 
+in your application. Note that the whole data passing process happens 
+completely on the server-side, so no serialization is required here.
 
-It should be mentioned that the response object is "per request". that is,
-it usually can't live across links. Therefore, when paging is added to your view
-page, for example, you need to either pass some data to the link as C<args>
-or explicitly tell Jifty to preserve states for you.
+It should also be mentioned that the response object is "per request". That is,
+it usually can't live up to another user request. Therefore, when paging mechanism 
+is applied to your view page, for example, you have to either pass some data 
+to the link constructor or explicitly tell Jifty to preserve states for you.
 
-See the source code of Jifty's Pony site and L<Jifty::Request::Mapper> for some 
+See L</monikers>, the Jifty Pony site's source, and L<Jifty::Request::Mapper> for some 
 more information.
 
 =head2 USING ACTIONS
