[Manual/Actions.pod] - removed mumble that i'm not sure. :)
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2227 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Actions.pod
+++ b/lib/Jifty/Manual/Actions.pod
@@ -258,8 +258,7 @@ view page template may have the following piece of code in it:
 
 where C<'post_blog'> is the moniker for your post page action object.
 In fact, that's exactly how actions "return" values to other templates 
-in your application. Note that the whole data passing process happens 
-completely on the server-side, so no serialization is required here.
+in your application.
 
 It should also be mentioned that the response object is "per request". That is,
 it usually can't live up to another user request. Therefore, when paging mechanism 
